--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -168,7 +168,8 @@ bindm = $mainMod, mouse:273, resizewindow
 bind = $mainMod, R, exec, tofi-drun | xargs hyprctl dispatch exec --
 
 # auto start
-exec-once = waybar
+# exec-once = waybar
+exec-once = eww daemon && eww open bar
 exec-once = clash-verge
 exec-once = fcitx5
 exec-once = lxpolkit
