waybar:add more customization hyprland: fix brightnessctl on my device

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -168,8 +168,8 @@ bindm = $mainMod, mouse:273, resizewindow
 bind = $mainMod, R, exec, tofi-drun | xargs hyprctl dispatch exec --
 
 # auto start
-# exec-once = waybar
-exec-once = eww daemon && eww open bar
+exec-once = waybar
+# exec-once = eww daemon && eww open bar
 exec-once = clash-verge
 exec-once = fcitx5
 exec-once = lxpolkit
@@ -194,8 +194,8 @@ bind = ALT, Print, exec, ~/.config/hypr/scripts/screenshot p
 # p: pixel
 
 # brightnessctl
-bind = , XF86MonBrightnessDown, exec, brightnessctl set 5%-
-bind = , XF86MonBrightnessUp, exec, brightnessctl set +5%
+bind = , XF86MonBrightnessDown, exec, brightnessctl set -d intel_backlight 5%-
+bind = , XF86MonBrightnessUp, exec, brightnessctl set -d intel_backlight 5%+
 
 # audio control
 bind = , XF86AudioMute, exec, amixer -q sset Master toggle
