--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -1,11 +1,25 @@
 {
     "layer": "top",
-    "position": "top", 
-    "height": 40, 
+    "position": "top",
+    "height": 40,
     "spacing": 6,
-    "modules-left": ["wlr/workspaces", "hyprland/window"],
-    "modules-center": ["clock"],
-    "modules-right": ["tray", "network", "pulseaudio", "memory", "cpu" ,"battery"],
+    "modules-left": [
+        "wlr/workspaces",
+        "hyprland/window"
+    ],
+    "modules-center": [
+        "clock"
+    ],
+    "modules-right": [
+        "tray",
+        "network",
+        "backlight",
+        "pulseaudio",
+        "memory",
+        "cpu",
+        "battery",
+        "custom/power"
+    ],
     "wlr/workspaces": {
         "format": "{icon}",
         "sort-by-number": true,
@@ -38,13 +52,25 @@
     },
     "battery": {
         "states": {
-            "warning": 30,
             "critical": 15,
-            "full":90
+            "warning": 30,
+            "half": 50,
+            "full": 90
         },
         "format": "{capacity}% <span foreground='#928374'>{icon}</span>",
         "format-charging": "{capacity}%<span foreground='#928374'>⚡{icon}</span>",
-        "format-icons": ["", "", "", "", ""]
+        "format-icons": [
+            "",
+            "",
+            "",
+            "",
+            ""
+        ]
+    },
+    "custom/power": {
+        "format": "",
+        "on-click": "wlogout",
+        "on-click-right": "swaynag -t warning -m 'Power Menu Options' -b 'Logout' 'swaymsg exit' -b 'Suspend' 'swaymsg exec systemctl suspend' -b 'shutdown' 'systemctl shutdown'"
     },
     "network": {
         "interval": 1,
@@ -68,8 +94,27 @@
             "phone": "",
             "portable": "",
             "car": "",
-            "default": ["", "", ""]
+            "default": [
+                "",
+                "",
+                ""
+            ]
         },
         "on-click-right": "pavucontrol"
-    }
+    },
+    "backlight": {
+        // "device": "acpi_video1",
+        "format": "{percent}% {icon}",
+        "format-icons": [
+            "",
+            "",
+            "",
+            "",
+            "",
+            "",
+            "",
+            "",
+            ""
+        ]
+    },
 }
