--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -169,6 +169,7 @@ bind = $mainMod, R, exec, tofi-drun | xargs hyprctl dispatch exec --
 
 # auto start
 exec-once = waybar
+exec-once = hyprpaper
 # exec-once = eww daemon && eww open bar
 exec-once = clash-verge
 exec-once = fcitx5
