--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -172,7 +172,8 @@ exec-once = waybar
 exec-once = hyprpaper
 # exec-once = eww daemon && eww open bar
 exec-once = clash-verge
-exec-once = fcitx5
+exec-once = fcitx5 --replace -d
+exec-once = swayidle -w timeout 1800 'systemctl suspend' timeout 120 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on' before-sleep 'swaylock'
 exec-once = lxpolkit
 
 # Grim ScreenShot
