--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -122,7 +122,7 @@ bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, dolphin
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, R, exec, wofi --show drun
+# bind = $mainMod, R, exec, wofi --show drun
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
@@ -165,7 +165,7 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 # tofi bind
-bind = $mainMod, R, exec, tofi-drun | xargs hyprctl dispatch exec --
+# bind = $mainMod, R, exec, tofi-drun | xargs hyprctl dispatch exec --
 
 # auto start
 exec-once = waybar
@@ -205,3 +205,4 @@ bind = , XF86AudioLowerVolume, exec, amixer -q sset Master 5%- unmute
 bind = , XF86AudioRaiseVolume, exec, amixer -q sset Master 5%+ unmute
 bind = , XF86AudioMicMute, exec, amixer -q sset Capture toggle
 bind = , XF86AudioPlay, exec, playerctl play-pause
+bind = $mainMod, R, exec, rofi -combi-modi drun,ssh -show combi -terminal kitty
