--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -84,7 +84,9 @@
         "format-disconnected": "⚠ Disconnected",
         "tooltip-format": " {ifname} {ipaddr}/{cidr} via {gwaddr}",
         "format-alt": "{ifname}: {ipaddr}/{cidr}",
+        "on-click": "bash ~/.config/waybar/scripts/rofi-wifi-menu.sh",
         "on-click-right": "nm-connection-editor"
+        
     },
     "pulseaudio": {
         "scroll-step": 5,
