--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -120,7 +120,7 @@ $mainMod = SUPER
 bind = $mainMod, Q, exec, kitty
 bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
-bind = $mainMod, E, exec, dolphin
+bind = $mainMod, E, exec, nautilus
 bind = $mainMod, V, togglefloating,
 # bind = $mainMod, R, exec, wofi --show drun
 bind = $mainMod, P, pseudo, # dwindle
@@ -169,11 +169,12 @@ bindm = $mainMod, mouse:273, resizewindow
 
 # auto start
 exec-once = waybar
+exec-once = wayvnc
 exec-once = hyprpaper
 # exec-once = eww daemon && eww open bar
 exec-once = clash-verge
 exec-once = fcitx5 --replace -d
-exec-once = swayidle -w timeout 1800 'systemctl suspend' timeout 120 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on' before-sleep 'swaylock'
+exec-once = swayidle -w timeout 1800 'systemctl suspend' resume 'hyprctl dispatch dpms on' timeout 120 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on' before-sleep 'swaylock'
 exec-once = lxpolkit
 
 # Grim ScreenShot
