--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -13,15 +13,15 @@
         "idle_inhibitor",
         "wlr/workspaces"
     ],
-    "modules-center": [
-    ],
+    "modules-center": [],
     "modules-right": [
         "tray",
         "backlight",
         "pulseaudio",
         "network",
-        "battery",
-        "clock"
+        "bluetooth",
+        "clock",
+        "battery"
     ],
     "wlr/workspaces": {
         "format": "{icon}",
@@ -82,11 +82,11 @@
         "format-ethernet": "\uf796 {bandwidthUpBytes} {bandwidthDownBytes}",
         "format-linked": " {ifname} (No IP)",
         "format-disconnected": "⚠ Disconnected",
+        "format-disabled": "⚠ Disabled",
         "tooltip-format": " {ifname} {ipaddr}/{cidr} via {gwaddr}",
         "format-alt": "{ifname}: {ipaddr}/{cidr}",
         "on-click": "bash ~/.config/waybar/scripts/rofi-wifi-menu.sh",
         "on-click-right": "nm-connection-editor"
-        
     },
     "pulseaudio": {
         "scroll-step": 5,
@@ -110,11 +110,16 @@
             ]
         },
         "on-click-right": "pavucontrol",
-        "on-click":"amixer -q sset Master toggle"
+        "on-click": "amixer -q sset Master toggle"
     },
     "bluetooth": {
-        "on-click": "~/.config/waybar/scripts/rofi-bluetooth &",
-        "format": " {status}"
+        "format": " {status}",
+        "format-connected": " {num_connections} connected",
+        "tooltip-format": "{controller_alias}\t{controller_address}\n\n{num_connections} connected",
+        "tooltip-format-connected": "{controller_alias}\t{controller_address}\n\n{num_connections} connected\n\n{device_enumerate}",
+        "tooltip-format-enumerate-connected": "{device_alias}\t{device_address}",
+        "tooltip-format-enumerate-connected-battery": "{device_alias}\t{device_address}\t{device_battery_percentage}%",
+        "on-click": "~/.config/waybar/scripts/rofi-bluetooth &"
     },
     "battery": {
         "bat": "BAT0",
